# chunkax

./: README.md  pyproject.toml
chunkax/: __init__.py  _core.py
tests/: test_chunk.py
