[project]
name = "chunkax"
version = "0.1.0"
description = "A simple JAX transform that applies a function over chunks of arrays and reassembles the result"
authors = [{ name = "Alexander Becker", email = "alexander.becker@tum.de" }]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = ["jax", "numpy"]

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
testpaths = ["tests"]
