[project]
name = "chunkax"
version = "0.2.1"
description = "JAX transform for efficiently applying a function over chunks of arrays"
authors = [{ name = "Alexander Becker", email = "alexander.becker@tum.de" }]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = ["jax", "numpy"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
testpaths = ["tests"]
